--- a/cors_csrf.html
+++ b/cors_csrf.html
@@ -19,7 +19,7 @@
    </head>
    <body>
       <center>
-      <h2>CORS PoC Exploit </h2>
+      <h2>CORS CSRF Exploit </h2>
       <h3>create a user & Show the response</h3>
       <div id="demo">
          <button type="button" onclick="cors()">Exploit</button>
